[build-system]
requires = ["setuptools>=61", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "lucid-component-example"
dynamic = ["version"]
description = "Example LUCID component (template — replace with your component)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "LUCID" }]
dependencies = [
    "lucid-component-base @ git+https://github.com/LucidLabPlatform/lucid-component-base@v0.1.0"
]

[project.optional-dependencies]
dev = ["pytest"]

[project.entry-points."lucid.components"]
example = "lucid_component_example.component:ExampleComponent"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
version_scheme = "no-guess-dev"
local_scheme = "no-local-version"

[tool.pytest.ini_options]
testpaths = ["tests"]
